--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# for mac
+.DS_Store
+
+.idea
+.gradle
+gradle
+gradlew
+gradlew.bat
+.java-version
+build
